crates/au-cli/tests/it/snapshots/it__scenarios__cross-repo-meta-body-mismatch.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [
    {
      "code": "reference-target-type-mismatch",
      "message": "field 'by' references 'acme::base' (claims: org) but its `type:` closure does not include 'person'",
      "related": [
        {
          "file": "<root>/scenarios/cross-repo-meta-body-mismatch/app/type/stamp.type.yaml",
          "line_col": {
            "end": {
              "col": 14,
              "line": 3
            },
            "start": {
              "col": 7,
              "line": 3
            }
          },
          "range": {
            "end": 56,
            "start": 49
          }
        }
      ],
      "severity": "error",
      "span": {
        "file": "<root>/scenarios/cross-repo-meta-body-mismatch/app/type/card.type.yaml",
        "line_col": {
          "end": {
            "col": 25,
            "line": 5
          },
          "start": {
            "col": 9,
            "line": 5
          }
        },
        "range": {
          "end": 67,
          "start": 51
        }
      }
    }
  ],
  "instances": {
    "aborted_at_load": true,
    "count": 4,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 35,
                        "line_col": {
                          "end": {
                            "col": 36,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/cross-repo-meta-body-mismatch/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "cross-repo-meta-body-mismatch"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "cross-repo-meta-body-mismatch"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/cross-repo-meta-body-mismatch/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": null,
        "claim": [
          "au.engine.workspace::au-engine"
        ],
        "closure": [
          "au.engine.workspace::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "disabled",
            "origins": [
              {
                "name": "au.engine.workspace",
                "origin_path": "<au-engine-builtin>/au.engine.workspace.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String[]"
              }
            ],
            "required": false,
            "shape": "String[]"
          },
          {
            "divergent": false,
            "field": "discover",
            "origins": [
              {
                "name": "au.engine.workspace",
                "origin_path": "<au-engine-builtin>/au.engine.workspace.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String[]"
              }
            ],
            "required": false,
            "shape": "String[]"
          },
          {
            "divergent": false,
            "field": "edit",
            "origins": [
              {
                "name": "au.engine.workspace",
                "origin_path": "<au-engine-builtin>/au.engine.workspace.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String[]"
              }
            ],
            "required": false,
            "shape": "String[]"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 39,
                        "line_col": {
                          "end": {
                            "col": 34,
                            "line": 2
                          },
                          "start": {
                            "col": 5,
                            "line": 2
                          }
                        },
                        "start": 10
                      },
                      "file": "<root>/scenarios/cross-repo-meta-body-mismatch/.arsumbris/workspace.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "cross-repo-meta-body-mismatch"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "cross-repo-meta-body-mismatch"
                }
              },
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 48,
                        "line_col": {
                          "end": {
                            "col": 9,
                            "line": 3
                          },
                          "start": {
                            "col": 5,
                            "line": 3
                          }
                        },
                        "start": 44
                      },
                      "file": "<root>/scenarios/cross-repo-meta-body-mismatch/.arsumbris/workspace.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "base"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "base"
                }
              },
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 56,
                        "line_col": {
                          "end": {
                            "col": 8,
                            "line": 4
                          },
                          "start": {
                            "col": 5,
                            "line": 4
                          }
                        },
                        "start": 53
                      },
                      "file": "<root>/scenarios/cross-repo-meta-body-mismatch/.arsumbris/workspace.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "app"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "app"
                }
              }
            ],
            "field": "edit"
          }
        ],
        "file": "<root>/scenarios/cross-repo-meta-body-mismatch/.arsumbris/workspace.yaml",
        "section_presence": null
      },
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 10,
                        "line_col": {
                          "end": {
                            "col": 11,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/cross-repo-meta-body-mismatch/base/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "base"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "base"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/cross-repo-meta-body-mismatch/base/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [],
        "claim": [
          "org"
        ],
        "closure": [
          "org"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "org",
                "origin_path": "<root>/scenarios/cross-repo-meta-body-mismatch/base/type/org.type.yaml",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 24,
                        "line_col": {
                          "end": {
                            "col": 11,
                            "line": 3
                          },
                          "start": {
                            "col": 7,
                            "line": 3
                          }
                        },
                        "start": 20
                      },
                      "file": "<root>/scenarios/cross-repo-meta-body-mismatch/base/acme.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "Acme"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "Acme"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/cross-repo-meta-body-mismatch/base/acme.md",
        "section_presence": null
      }
    ]
  }
}
